Load plugins concurrently